--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,12 +10,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: npm install and build webpack
         run: |
           npm install
           npm run build
-
+      - uses: actions/upload-artifact@main
+        with:
+          name: webpack artifacts
+          path: public/
     
   test:
     runs-on: ubuntu-latest
@@ -26,9 +29,14 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: actions/download-artifact@main
+      with: 
+        name: webpack artifacts
+        path: public/
+        
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install and test
